Working solution to part A, needs linting.

--- a/day03/makefile
+++ b/day03/makefile
@@ -1,8 +1,8 @@
 day03.out: day03.cpp
 	g++ -o day03.out day03.cpp -std=c++14 -pedantic -Wall -Werror
 
-# test.out: test.cpp
-# 	g++ -o test.out test.cpp -std=c++14 -pedantic -Wall -Werror
+test.out: test.cpp
+	g++ -o test.out test.cpp -std=c++14 -pedantic -Wall -Werror
 
 clean:
 	rm *.o *.out day03.out test.out
